Fix: finally fixed the slot arrangement and in the end it was not the slots but just my recipe ingredients being swapped, awesome xD